--- a/index.HTML
+++ b/index.HTML
@@ -1,10 +1,23 @@
-<div id="controls">
-  <label for="time-input">Temps en minutes :</label>
-  <input type="number" id="time-input" min="0" value="1">
-  <button id="start-btn">Démarrer</button>
-</div>
-<div id="timer">00:00:00</div>
- 
-<div id="clock">00:00</div> <!-- Ajout de l'horloge -->
- 
-<button id="fullscreen-btn">Plein écran</button>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Minuteur</title>
+
+  <!-- Lien vers le fichier CSS -->
+  <link rel="stylesheet" href="C:\Users\HP\Downloads\projetTimer\style.CSS">
+</head>
+<body>
+  <div id="controls">
+    <label for="time-input">Temps en minutes :</label>
+    <input type="number" id="time-input" min="0" value="1">
+    <button id="start-btn">Démarrer</button>
+  </div>
+  <div id="timer">00:00:00</div>
+  <div id="clock">00:00</div> <!-- Ajout de l'horloge -->
+  <button id="fullscreen-btn">Plein écran</button>
+
+  <!-- Lien vers le fichier JavaScript -->
+  <script src="C:\Users\HP\Downloads\projetTimer\script.js"></script>
+</body>
+</html>
